--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "test:watch": "mocha --compilers js:babel-register --reporter min --watch",
     "test:cover": "nyc --reporter=html --reporter=text mocha",
     "dev": "nodemon --ignore client/ --ignore dist/ server.js",
-    "up": "npm run bu && npm run --prefix bin push",
-    "bu": "rimraf dist && npm run bu:server && npm run bu:client && npm run bu:app && gulp && rimraf deploy/dist && cp -R dist deploy/",
+    "patch": "npm version patch && npm run up",
+    "minor": "npm version minor && npm run up",
+    "major": "npm version major && npm run up",
+    "up": "npm run bu && npm run pu",
+    "bu": "./task build",
+    "pu": "npm run --prefix bin push",
     "bu:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "bu:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
     "bu:app": "cross-env NODE_ENV=production webpack --config build/webpack.config.js --progress --hide-modules",
     "start": "cross-env NODE_ENV=production node server",
     "push": "npm run now && npm run heroku",
-    "now": "now --public --force && now alias us && open https://us.now.sh/build && now rm dayflow --yes --safe || true",
+    "now": "now --public --force && now alias us && now rm dayflow --yes --safe || true && open https://us.now.sh/build",
     "heroku": "git init && git remote add heroku https://git.heroku.com/dayflow.git && git add . && git commit -am 'new deployment' && git push heroku master --force && open http://yah.vn/build"
   },
   "dependencies": {
