--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "test:watch": "mocha --compilers js:babel-register --reporter min --watch",
     "test:cover": "nyc --reporter=html --reporter=text mocha",
     "dev": "nodemon --ignore client/ --ignore dist/ server.js",
-    "patch": "npm version patch && npm run up",
-    "minor": "npm version minor && npm run up",
-    "major": "npm version major && npm run up",
+    "patch": "npm version patch && bash patch.sh",
+    "minor": "npm version minor && bash patch.sh",
+    "major": "npm version major && bash patch.sh",
     "up": "npm run bu && npm run pu",
     "bu": "bash bash.sh",
     "pu": "npm run --prefix bin push",
