--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,7 +12,8 @@ pipelines:
       - node
       script:
       - npm i
-      - npm run build
+      - npm run bu
+      - cd bin
       - npm i -g --unsafe-perm now
       - now --public --token=$NOW_API_KEY --team=flow
       - now alias bit --token=$NOW_API_KEY --team=flow
@@ -26,6 +27,9 @@ pipelines:
       - now alias new --token=$NOW_API_KEY --team=flow
       - now rm dayflow --yes --safe --token=$NOW_API_KEY --team=flow || true
       - echo "Code deployed to now server"
+      - git init
+      - git add .
+      - git commit -am 'new deployment'
       - git remote add heroku https://heroku:$HEROKU_API_KEY@git.heroku.com/acube.git
-      - git push heroku master
+      - git push heroku master --force
       - echo "Code deployed to heroku server"
