--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
     "test:watch": "mocha --compilers js:babel-register --reporter min --watch",
     "test:cover": "nyc --reporter=html --reporter=text mocha",
     "dev": "nodemon --ignore client/ --ignore dist/ server.js",
-    "patch": "npm version patch && bash patch.sh",
-    "minor": "npm version minor && bash patch.sh",
-    "major": "npm version major && bash patch.sh",
-    "gp": "bash gitpush.sh",
     "up": "npm run bu && npm run pu",
-    "bu": "bash build.sh",
+    "bu": "bash sh/build.sh",
     "pu": "npm run --prefix bin push",
+    "gp": "bash sh/gitpush.sh",
+    "patch": "npm version patch && bash sh/patch.sh",
+    "minor": "npm version minor && bash sh/patch.sh",
+    "major": "npm version major && bash sh/patch.sh",
     "bu:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
     "bu:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules",
     "bu:app": "cross-env NODE_ENV=production webpack --config build/webpack.config.js --progress --hide-modules",
     "start": "cross-env NODE_ENV=production node server",
     "push": "npm run now && npm run heroku",
-    "now": "now --public --force && now alias us && now rm dayflow --yes --safe || true && open https://us.now.sh/build",
-    "heroku": "git init && git remote add heroku https://git.heroku.com/dayflow.git && git add . && git commit -am 'new deployment' && git push heroku master --force && open http://yah.vn/build"
+    "now": "bash now.sh",
+    "heroku": "bash heroku.sh"
   },
   "dependencies": {
     "axios": "^0.16.2",
