--- a/package.json
+++ b/package.json
@@ -36,18 +36,18 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "bootflat": "^2.0.4",
-    "buefy": "^0.5.3",
-    "bulma": "^0.5.3",
+    "buefy": "^0.5.4",
+    "bulma": "^0.6.0",
     "bunyan": "^2.0.2",
     "chalk": "^2.1.0",
     "cheerio": "^1.0.0-rc.2",
     "clockwork": "^0.1.4",
     "compression": "^1.7.1",
-    "connect-mongo": "^1.3.2",
+    "connect-mongo": "^2.0.0",
     "dotenv": "^4.0.0",
     "download": "^6.2.5",
     "errorhandler": "^1.5.0",
-    "express": "^4.16.1",
+    "express": "^4.16.2",
     "express-flash": "^0.0.2",
     "express-session": "^1.15.6",
     "express-status-monitor": "^1.0.1",
@@ -57,29 +57,29 @@
     "fbgraph": "^1.4.1",
     "github": "^11.0.0",
     "gm": "^1.23.0",
-    "helmet": "^3.8.2",
+    "helmet": "^3.9.0",
     "heroku-client": "^3.0.3",
     "insert-css": "^2.0.0",
     "instagram-node": "^0.5.8",
-    "jsonwebtoken": "^8.0.1",
+    "jsonwebtoken": "^8.1.0",
     "lastfm": "^0.9.2",
     "lob": "^4.1.1",
     "lodash": "^4.17.4",
     "lru-cache": "^4.1.1",
     "lusca": "^1.5.2",
     "marked": "^0.3.6",
-    "mongodb": "^2.2.31",
-    "mongoose": "^4.12.1",
+    "mongodb": "^2.2.33",
+    "mongoose": "^4.12.3",
     "monk": "^6.0.5",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "mv": "^2.1.1",
-    "nanoid": "^0.2.1",
+    "nanoid": "^0.2.2",
     "nib": "^1.1.2",
     "node-foursquare": "^0.3.0",
     "node-linkedin": "^0.5.6",
     "node-sass-middleware": "^0.11.0",
-    "nodemailer": "^4.1.3",
+    "nodemailer": "^4.2.0",
     "nodemailer-direct-transport": "^3.3.2",
     "numeral": "^2.0.6",
     "passport": "0.4.0",
@@ -100,23 +100,23 @@
     "stripe": "^5.1.1",
     "tracer": "^0.8.11",
     "tumblr.js": "^1.1.1",
-    "twilio": "^3.8.0",
+    "twilio": "^3.8.1",
     "twit": "^2.2.9",
     "validator": "^9.0.0",
-    "vue": "^2.4.4",
+    "vue": "^2.5.2",
     "vue-autosize": "^1.0.2",
     "vue-focus": "^2.1.0",
-    "vue-lazyload": "^1.1.3",
+    "vue-lazyload": "^1.1.4",
     "vue-markdown": "^2.2.4",
-    "vue-router": "^2.7.0",
+    "vue-router": "^3.0.1",
     "vue-select": "^2.3.0",
-    "vue-server-renderer": "^2.4.4",
+    "vue-server-renderer": "^2.5.2",
     "vue-styled-components-fork": "^1.2.3",
     "vue-textarea-autosize": "^1.0.3",
     "vuedraggable": "^2.14.1",
     "vuetify": "^0.15.7",
-    "vuex": "^2.4.1",
-    "vuex-router-sync": "^4.3.2",
+    "vuex": "^3.0.0",
+    "vuex-router-sync": "^5.0.0",
     "webfontloader": "^1.6.28",
     "winston": "^2.4.0"
   },
@@ -143,13 +143,13 @@
     "commander": "^2.11.0",
     "compression-webpack-plugin": "^1.0.1",
     "coveralls": "^3.0.0",
-    "cross-env": "^5.0.5",
+    "cross-env": "^5.1.0",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "csv": "^1.1.1",
     "es6-promise": "^4.1.1",
-    "eslint": "^4.8.0",
-    "eslint-config-airbnb-base": "^12.0.2",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-chai-friendly": "^0.4.0",
     "eslint-plugin-import": "^2.7.0",
     "extract-text-webpack-plugin": "^3.0.1",
@@ -161,9 +161,9 @@
     "gulp-clean": "^0.3.2",
     "inquirer": "^3.3.0",
     "istanbul": "^1.1.0-alpha.1",
-    "less": "^2.7.2",
+    "less": "^3.0.0-pre.4",
     "less-loader": "^4.0.5",
-    "mocha": "^3.5.3",
+    "mocha": "^4.0.1",
     "nyc": "^11.2.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "rimraf": "^2.6.2",
@@ -175,13 +175,13 @@
     "supertest": "^3.0.0",
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.6.2",
-    "vue-loader": "^13.0.5",
+    "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
+    "vue-template-compiler": "^2.5.2",
+    "webpack": "^3.7.1",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.19.1",
+    "webpack-hot-middleware": "^2.20.0",
     "webpack-merge": "^4.1.0",
     "webpack-node-externals": "^1.6.0",
     "workbox-webpack-plugin": "^2.1.0"
