--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "nodemailer": "^4.2.0",
     "nodemailer-direct-transport": "^3.3.2",
     "numeral": "^2.0.6",
+    "parse-color": "^1.0.0",
     "passport": "0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
@@ -105,6 +106,7 @@
     "validator": "^9.0.0",
     "vue": "^2.5.2",
     "vue-autosize": "^1.0.2",
+    "vue-color": "^2.4.2",
     "vue-focus": "^2.1.0",
     "vue-lazyload": "^1.1.4",
     "vue-markdown": "^2.2.4",
