--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "vue-focus": "^2.1.0",
     "vue-lazyload": "^1.1.4",
     "vue-markdown": "^2.2.4",
+    "vue-range-slider": "^0.2.4",
     "vue-router": "^3.0.1",
     "vue-select": "^2.3.0",
     "vue-server-renderer": "^2.5.2",
