--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "passport-openid": "^0.4.0",
     "passport-twitter": "^1.0.4",
     "paypal-rest-sdk": "^1.7.1",
+    "portal-vue": "^1.1.1",
     "pug": "^2.0.0-rc.4",
     "request": "^2.83.0",
     "route-cache": "^0.4.3",
@@ -108,6 +109,7 @@
     "vue-autosize": "^1.0.2",
     "vue-color": "^2.4.2",
     "vue-focus": "^2.1.0",
+    "vue-js-modal": "^1.3.3",
     "vue-lazyload": "^1.1.4",
     "vue-markdown": "^2.2.4",
     "vue-range-slider": "^0.2.4",
