--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "vue-color": "^2.4.2",
     "vue-focus": "^2.1.0",
     "vue-js-modal": "^1.3.4",
+    "vue-js-toggle-button": "^1.2.0",
     "vue-lazyload": "^1.1.4",
     "vue-markdown": "^2.2.4",
     "vue-range-slider": "^0.2.4",
