--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "clockwork": "^0.1.4",
     "compression": "^1.7.1",
     "connect-mongo": "^2.0.0",
+    "css-box-shadow": "^1.0.0-3",
     "dotenv": "^4.0.0",
     "download": "^6.2.5",
     "errorhandler": "^1.5.0",
