--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "heroku": "bash heroku.sh"
   },
   "dependencies": {
+    "aphrodite-jss": "^2.0.0",
     "axios": "^0.17.0",
     "bcrypt-nodejs": "^0.0.3",
     "bezier-easing": "^2.0.3",
@@ -41,12 +42,17 @@
     "bunyan": "^2.0.2",
     "chalk": "^2.1.0",
     "cheerio": "^1.0.0-rc.2",
+    "chroma-js": "^1.3.4",
     "clockwork": "^0.1.4",
+    "color": "^2.0.0",
     "compression": "^1.7.1",
     "connect-mongo": "^2.0.0",
     "css-box-shadow": "^1.0.0-3",
+    "cxs": "^6.1.0",
     "dotenv": "^4.0.0",
     "download": "^6.2.5",
+    "emotion": "^8.0.9",
+    "emotion-server": "^8.0.9",
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
     "express-flash": "^0.0.2",
@@ -56,13 +62,25 @@
     "express-validator": "^4.2.1",
     "fb": "^2.0.0",
     "fbgraph": "^1.4.1",
+    "fela": "^6.0.3",
+    "fela-dom": "^6.0.3",
+    "fela-plugin-custom-property": "^5.0.11",
+    "fela-plugin-embedded": "^5.1.6",
+    "fela-plugin-extend": "^5.0.11",
+    "fela-plugin-lvha": "^5.0.11",
+    "fela-plugin-named-media-query": "^5.0.11",
+    "fela-plugin-placeholder-prefixer": "^5.0.11",
+    "fela-plugin-unit": "^5.0.11",
     "github": "^11.0.0",
+    "glamor": "^2.20.40",
     "gm": "^1.23.0",
     "helmet": "^3.9.0",
     "heroku-client": "^3.0.3",
     "insert-css": "^2.0.0",
     "instagram-node": "^0.5.8",
     "jsonwebtoken": "^8.1.0",
+    "jss": "^9.0.0",
+    "jss-preset-default": "^4.0.1",
     "lastfm": "^0.9.2",
     "lob": "^4.1.1",
     "lodash": "^4.17.4",
@@ -95,6 +113,7 @@
     "passport-openid": "^0.4.0",
     "passport-twitter": "^1.0.4",
     "paypal-rest-sdk": "^1.7.1",
+    "polished": "^1.8.1",
     "portal-vue": "^1.1.1",
     "pug": "^2.0.0-rc.4",
     "request": "^2.83.0",
@@ -131,6 +150,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-filehash": "^6.9.5",
+    "babel-plugin-emotion": "^8.0.9",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-imports": "^1.4.1",
