--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "monk": "^6.0.5",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "murmurhash-js": "^1.0.0",
     "mv": "^2.1.1",
     "nanoid": "^1.0.0",
     "nib": "^1.1.2",
