--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "bootflat": "^2.0.4",
     "buefy": "^0.5.4",
     "bulma": "^0.6.0",
-    "bunyan": "^2.0.2",
-    "chalk": "^2.1.0",
+    "bunyan": "^1.8.12",
+    "chalk": "^2.3.0",
     "cheerio": "^1.0.0-rc.2",
     "chroma-js": "^1.3.4",
     "clockwork": "^0.1.4",
@@ -60,7 +60,7 @@
     "express-session": "^1.15.6",
     "express-status-monitor": "^1.0.1",
     "express-stylus": "^0.1.0",
-    "express-validator": "^4.2.1",
+    "express-validator": "^4.3.0",
     "fb": "^2.0.0",
     "fbgraph": "^1.4.1",
     "fela": "^6.0.3",
@@ -72,7 +72,7 @@
     "fela-plugin-named-media-query": "^5.0.11",
     "fela-plugin-placeholder-prefixer": "^5.0.11",
     "fela-plugin-unit": "^5.0.11",
-    "github": "^11.0.0",
+    "github": "^12.0.1",
     "glamor": "^2.20.40",
     "gm": "^1.23.0",
     "helmet": "^3.9.0",
@@ -89,18 +89,18 @@
     "lusca": "^1.5.2",
     "marked": "^0.3.6",
     "mongodb": "^2.2.33",
-    "mongoose": "^4.12.4",
+    "mongoose": "^4.12.5",
     "monk": "^6.0.5",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "murmurhash-js": "^1.0.0",
     "mv": "^2.1.1",
-    "nanoid": "^1.0.0",
+    "nanoid": "^1.0.1",
     "nib": "^1.1.2",
     "node-foursquare": "^0.3.0",
     "node-linkedin": "^0.5.6",
     "node-sass-middleware": "^0.11.0",
-    "nodemailer": "^4.2.0",
+    "nodemailer": "^4.3.1",
     "nodemailer-direct-transport": "^3.3.2",
     "numeral": "^2.0.6",
     "parse-color": "^1.0.0",
@@ -121,12 +121,12 @@
     "request": "^2.83.0",
     "route-cache": "^0.4.3",
     "sendgrid": "^5.2.3",
-    "stripe": "^5.1.1",
+    "stripe": "^5.2.0",
     "tracer": "^0.8.11",
     "tumblr.js": "^1.1.1",
-    "twilio": "^3.8.1",
+    "twilio": "^3.9.1",
     "twit": "^2.2.9",
-    "validator": "^9.0.0",
+    "validator": "^9.1.1",
     "vue": "^2.5.2",
     "vue-autosize": "^1.0.2",
     "vue-color": "^2.4.2",
@@ -168,21 +168,21 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "chai": "^4.1.2",
-    "coffee-loader": "^0.8.0",
-    "coffeescript": "^2.0.1",
+    "coffee-loader": "^0.9.0",
+    "coffeescript": "^2.0.2",
     "commander": "^2.11.0",
     "compression-webpack-plugin": "^1.0.1",
     "coveralls": "^3.0.0",
-    "cross-env": "^5.1.0",
+    "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
-    "csv": "^1.1.1",
+    "csv": "^2.0.0",
     "es6-promise": "^4.1.1",
-    "eslint": "^4.9.0",
+    "eslint": "^4.10.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-chai-friendly": "^0.4.0",
-    "eslint-plugin-import": "^2.7.0",
-    "extract-text-webpack-plugin": "^3.0.1",
+    "eslint-plugin-import": "^2.8.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -190,14 +190,14 @@
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "inquirer": "^3.3.0",
-    "istanbul": "^1.1.0-alpha.1",
-    "less": "^3.0.0-pre.4",
+    "istanbul": "^0.4.5",
+    "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "mocha": "^4.0.1",
-    "nyc": "^11.2.1",
+    "nyc": "11.2.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "rimraf": "^2.6.2",
-    "sinon": "^4.0.1",
+    "sinon": "^4.0.2",
     "sinon-mongoose": "^2.0.2",
     "style-loader": "^0.19.0",
     "stylus": "^0.54.5",
