--- a/package.json
+++ b/package.json
@@ -64,16 +64,16 @@
     "express-validator": "^4.3.0",
     "fb": "^2.0.0",
     "fbgraph": "^1.4.1",
-    "fela": "^6.0.3",
-    "fela-dom": "^6.0.3",
-    "fela-plugin-custom-property": "^5.0.11",
-    "fela-plugin-embedded": "^5.1.6",
-    "fela-plugin-extend": "^5.0.11",
-    "fela-plugin-lvha": "^5.0.11",
+    "fela": "^6.0.4",
+    "fela-dom": "^6.0.5",
+    "fela-plugin-custom-property": "^6.0.0",
+    "fela-plugin-embedded": "^5.1.7",
+    "fela-plugin-extend": "^6.0.0",
+    "fela-plugin-lvha": "^5.0.12",
     "fela-plugin-named-media-query": "^5.0.11",
-    "fela-plugin-placeholder-prefixer": "^5.0.11",
-    "fela-plugin-unit": "^5.0.11",
-    "firebase": "^4.6.0",
+    "fela-plugin-placeholder-prefixer": "^5.0.13",
+    "fela-plugin-unit": "^5.0.12",
+    "firebase": "^4.6.1",
     "github": "^12.0.1",
     "glamor": "^2.20.40",
     "gm": "^1.23.0",
@@ -82,7 +82,7 @@
     "insert-css": "^2.0.0",
     "instagram-node": "^0.5.8",
     "jsonwebtoken": "^8.1.0",
-    "jss": "^9.0.0",
+    "jss": "^9.1.0",
     "jss-preset-default": "^4.0.1",
     "lastfm": "^0.9.2",
     "lob": "^4.1.1",
@@ -91,7 +91,7 @@
     "lusca": "^1.5.2",
     "marked": "^0.3.6",
     "mongodb": "^2.2.33",
-    "mongoose": "^4.12.5",
+    "mongoose": "^4.13.0",
     "monk": "^6.0.5",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
@@ -123,7 +123,7 @@
     "request": "^2.83.0",
     "route-cache": "^0.4.3",
     "sendgrid": "^5.2.3",
-    "stripe": "^5.2.0",
+    "stripe": "^5.3.0",
     "tracer": "^0.8.11",
     "tumblr.js": "^1.1.1",
     "twilio": "^3.9.1",
@@ -144,7 +144,7 @@
     "vue-styled-components-fork": "^1.2.3",
     "vue-textarea-autosize": "^1.0.3",
     "vuedraggable": "^2.14.1",
-    "vuex": "^3.0.0",
+    "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
     "webfontloader": "^1.6.28",
     "winston": "^2.4.0"
@@ -196,10 +196,10 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "mocha": "^4.0.1",
-    "nyc": "11.2.1",
+    "nyc": "^11.3.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "rimraf": "^2.6.2",
-    "sinon": "^4.0.2",
+    "sinon": "^4.1.0",
     "sinon-mongoose": "^2.0.2",
     "style-loader": "^0.19.0",
     "stylus": "^0.54.5",
@@ -214,9 +214,9 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.20.0",
-    "webpack-merge": "^4.1.0",
+    "webpack-merge": "^4.1.1",
     "webpack-node-externals": "^1.6.0",
-    "workbox-webpack-plugin": "^2.1.0"
+    "workbox-webpack-plugin": "^2.1.1"
   },
   "eslintConfig": {
     "extends": "airbnb-base",
