--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "6.0.0",
   "description": "A boilerplate for Node.js web applications",
   "engines": {
-    "node": "^8.5.0",
-    "npm": "^5.4.2",
-    "yarn": "^1.0.2"
+    "node": "8.5.0",
+    "npm": "^5.5.1",
+    "yarn": "^1.2.1"
   },
   "author": "Hoang Le <lehuyhoang117@gmail.com>",
   "license": "MIT",
