--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "6.0.1",
   "description": "A boilerplate for Node.js web applications",
   "engines": {
-    "node": "8.5.0",
+    "node": "^8.5.0",
     "npm": "^5.5.1",
     "yarn": "^1.2.1"
   },
