--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "cxs": "^6.1.0",
     "dotenv": "^4.0.0",
     "download": "^6.2.5",
-    "emotion": "^8.0.10",
-    "emotion-server": "^8.0.10",
+    "emotion": "^8.0.12",
+    "emotion-server": "^8.0.12",
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
     "express-flash": "^0.0.2",
@@ -79,8 +79,8 @@
     "lru-cache": "^4.1.1",
     "lusca": "^1.5.2",
     "marked": "^0.3.6",
-    "mongodb": "^2.2.33",
-    "mongoose": "^4.13.4",
+    "mongodb": "^3.0.0-rc0",
+    "mongoose": "^4.13.6",
     "monk": "^6.0.5",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
@@ -90,7 +90,6 @@
     "nib": "^1.1.2",
     "node-foursquare": "^0.3.0",
     "node-linkedin": "^0.5.6",
-    "node-sass-middleware": "^0.11.0",
     "nodemailer": "^4.4.0",
     "nodemailer-direct-transport": "^3.3.2",
     "numeral": "^2.0.6",
@@ -118,18 +117,18 @@
     "twilio": "^3.10.0",
     "twit": "^2.2.9",
     "validator": "^9.1.1",
-    "vue": "^2.5.8",
+    "vue": "^2.5.9",
     "vue-autosize": "^1.0.2",
     "vue-color": "^2.4.3",
     "vue-focus": "^2.1.0",
-    "vue-js-modal": "^1.3.4",
+    "vue-js-modal": "^1.3.6",
     "vue-js-toggle-button": "^1.2.0",
     "vue-lazyload": "^1.1.4",
     "vue-markdown": "^2.2.4",
     "vue-range-slider": "^0.2.4",
     "vue-router": "^3.0.1",
     "vue-select": "^2.3.0",
-    "vue-server-renderer": "^2.5.8",
+    "vue-server-renderer": "^2.5.9",
     "vue-styled-components-fork": "^1.2.3",
     "vue-textarea-autosize": "^1.0.3",
     "vuedraggable": "^2.15.0",
@@ -144,7 +143,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-filehash": "^6.9.5",
-    "babel-plugin-emotion": "^8.0.10",
+    "babel-plugin-emotion": "^8.0.12",
     "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-imports": "^1.4.1",
@@ -198,11 +197,11 @@
     "url-loader": "^0.6.2",
     "vue-loader": "^13.5.0",
     "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.5.8",
-    "webpack": "^3.8.1",
+    "vue-template-compiler": "^2.5.9",
+    "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.9.1",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.20.0",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-hot-middleware": "^2.21.0",
     "webpack-merge": "^4.1.1",
     "webpack-node-externals": "^1.6.0",
     "workbox-webpack-plugin": "^2.1.2"
